--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <!-- Web service config -->
@@ -11,9 +10,9 @@
 
     <!-- Application config -->
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
-    <add key="LogDirectory" value=""></add>
+    <add key="LogDirectory" value="C:\LogDirectory"></add>
     <add key="RootWorkingDirectory" value="C:\DataWorkingDirectory"></add>
     <add key="Machine" value="machine"></add>
     <add key="EmailNotification" value="lambert@viseo.com"></add>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
