--- a/Sources/Linxens.Core/Linxens.Core.csproj
+++ b/Sources/Linxens.Core/Linxens.Core.csproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -61,11 +63,44 @@
   <ItemGroup>
     <Compile Include="Logger\LoggerEnum.cs" />
     <Compile Include="Model\DataFile.cs" />
+    <Compile Include="Service References\QADServices\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service\DataFileService.cs" />
     <Compile Include="Logger\ILogger.cs" />
     <Compile Include="Logger\QadLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logger\TechnicalLogger.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Service References\QADServices\Linxens.Core.QADServices.xxf2q01_tt_Error_WarningRow.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\QADServices\Linxens.Core.QADServices.xxm2q01_tt_Error_WarningRow.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\QADServices\MES2QAD_AS.wsdl" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\QADServices\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\QADServices\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\QADServices\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\QADServices\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
