--- a/Sources/Linxens.Core/Linxens.Core.csproj
+++ b/Sources/Linxens.Core/Linxens.Core.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Logger\QadLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logger\TechnicalLogger.cs" />
+    <Compile Include="Service\QadService.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
