QAD service abstraction for Lambert

--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -11,7 +11,7 @@
 
     <!-- Application config -->
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
-    <add key="LogDirectory" value=""></add>
+    <add key="LogDirectory" value="C:\Logs"></add>
     <add key="RootWorkingDirectory" value="C:\DataWorkingDirectory"></add>
     <add key="Machine" value="machine"></add>
     <add key="EmailNotification" value="lambert@viseo.com"></add>
