add config SAOP on Gui

--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="MES2QAD_ASObj" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://test-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding"
+                bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj"
+                name="MES2QAD_ASObj" />
+    </client>
+  </system.serviceModel>
   <appSettings>
     <!-- Web service config -->
     <add key="User" value="Lambert"></add>
