Logger correction + gui correction

--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
     <bindings>
@@ -7,7 +7,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://test-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
+      <endpoint address="http://techLogs-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
     </client>
   </system.serviceModel>
   <appSettings>
