--- a/Sources/Linxens.Core/Linxens.Core.csproj
+++ b/Sources/Linxens.Core/Linxens.Core.csproj
@@ -62,7 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helper\DirectoryHelper.cs" />
+    <Compile Include="Helper\Helper.cs" />
     <Compile Include="Logger\LoggerEnum.cs" />
     <Compile Include="Model\DataFile.cs" />
     <Compile Include="Service References\QADServices\Reference.cs">
