--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -7,16 +7,14 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://techLogs-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
+      <endpoint address="http://test-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
     </client>
   </system.serviceModel>
   <appSettings>
     <!-- Web service config -->
-    <add key="User" value="Lambert"></add>
-    <add key="Domain" value=""></add>
-    <add key="Password" value="pwd"></add>
-    <add key="WebServiceUrl" value="http:\\webservice"></add>
-    <add key="WebServiceTimeOutTime" value="1"></add>
+    <add key="User" value="busettyr"></add>
+    <add key="Domain" value="4327"></add>
+    <add key="Password" value="linxen-test"></add>
 
     <!-- Application config -->
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
