write file before submit

--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -19,7 +19,7 @@
     <!-- Application config -->
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
     <add key="LogDirectory" value=""></add>
-    <add key="RootWorkingDirectory" value="C:\DataWorkingDirectory"></add>
+    <add key="RootWorkingDirectory" value="C:\WorkingDirectory"></add>
     <add key="Machine" value="machine"></add>
     <add key="EmailNotification" value="lambert@viseo.com"></add>
   </appSettings>
