pair programming - update installer

--- a/Sources/Linxens.Gui/app.Release.config
+++ b/Sources/Linxens.Gui/app.Release.config
@@ -19,7 +19,7 @@
     <!-- Application config -->
     <add key="RootDirectory" value="%ROOTDIR%"></add>
     <add key="LogDirectory" value="%LOGDIR%"></add>
-    <add key="RootWorkingDirectory" value="%ROOTDIR%"></add>
+    <add key="RootWorkingDirectory" value="%WORKDIR%"></add>
 
 
     <add key="Machine" value="machine"></add>
