Add attempt to retry to send a file

--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -15,10 +15,11 @@
     <add key="User" value="busettyr"></add>
     <add key="Domain" value="4327"></add>
     <add key="Password" value="linxen-test"></add>
+    <add key="AutoRetrySendOnError" value="2"></add>
 
     <!-- Application config -->
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
-    <add key="LogDirectory" value=""></add>
+    <add key="LogDirectory" value="C:\LogFiles"></add>
     <add key="RootWorkingDirectory" value="C:\WorkingDirectory"></add>
     <add key="Machine" value="machine"></add>
     <add key="EmailNotification" value="lambert@viseo.com"></add>
