--- a/Sources/Linxens.Gui/app.Release.config
+++ b/Sources/Linxens.Gui/app.Release.config
@@ -15,12 +15,12 @@
     <add key="User" value="%USER%"></add>
     <add key="Domain" value="%DOMAIN%"></add>
     <add key="Password" value="%PASSWD%"></add>
+    <add key="AutoRetrySendOnError" value="2"></add>
 
     <!-- Application config -->
     <add key="RootDirectory" value="%ROOTDIR%"></add>
     <add key="LogDirectory" value="%LOGDIR%"></add>
     <add key="RootWorkingDirectory" value="%WORKDIR%"></add>
-
 
     <add key="Machine" value="machine"></add>
     <add key="EmailNotification" value="lambert@viseo.com"></add>
