--- a/Sources/Linxens.Gui/app.Debug.config
+++ b/Sources/Linxens.Gui/app.Debug.config
@@ -1,31 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
-<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <system.serviceModel xdt:Transform="Replace">
+<configuration>
+  <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="MES2QAD_ASObj" />
+        <binding name="MES2QAD_ASObj"/>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://test-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding"
-                bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj" />
+      <endpoint address="http://test-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
     </client>
   </system.serviceModel>
-  <appSettings xdt:Transform="Replace">
+  <appSettings>
     <!-- Web service config -->
     <add key="User" value="busettyr"></add>
     <add key="Domain" value="4327"></add>
     <add key="Password" value="linxen-test"></add>
+    <add key="AutoRetrySendOnError" value="2"></add>
 
     <!-- Application config -->
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
-    <add key="LogDirectory" value=""></add>
-    <add key="RootWorkingDirectory" value="C:\DataWorkingDirectory"></add>
-    <add key="Machine" value="machine"></add>
-    <add key="EmailNotification" value="lambert@viseo.com"></add>
+    <add key="LogDirectory" value="C:\LogFiles"></add>
+    <add key="RootWorkingDirectory" value="C:\WorkingDirectory"></add>
+
+    <!-- Email alert config-->
+    <add key="EmailNotificationTo" value="nans.laupretre@viseo.com"></add>
+    <add key="EmailNotificationFrom" value="FiAutoDataEntry@linxens.com"></add>
+    <add key="EmailNotificationServer" value="smtp.linxens.com"></add>
+    <add key="EmailNotificationPort" value="25"></add>
   </appSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
 </configuration>
