--- a/Sources/Linxens.Gui/app.Release.config
+++ b/Sources/Linxens.Gui/app.Release.config
@@ -11,19 +11,22 @@
     </client>
   </system.serviceModel>
   <appSettings>
-    <!-- Web service config -->
+    <!-- QAD service config -->
     <add key="User" value="%USER%"></add>
     <add key="Domain" value="%DOMAIN%"></add>
-    <add key="Password" value="%PASSWD%"></add>
-    <add key="AutoRetrySendOnError" value="2"></add>
+    <add key="Password" value="%QADPASSWD%"></add>
+    <add key="AutoRetrySendOnError" value="%AUTORETRY%"></add>
 
-    <!-- Application config -->
+    <!-- Application directories config -->
     <add key="RootDirectory" value="%ROOTDIR%"></add>
     <add key="LogDirectory" value="%LOGDIR%"></add>
     <add key="RootWorkingDirectory" value="%WORKDIR%"></add>
 
-    <add key="Machine" value="machine"></add>
-    <add key="EmailNotification" value="lambert@viseo.com"></add>
+    <!-- Email alert config-->
+    <add key="EmailNotificationTo" value="%EMAILTO%"></add>
+    <add key="EmailNotificationFrom" value="%EMAILFROM%"></add>
+    <add key="EmailNotificationServer" value="%EMAILSRV%"></add>
+    <add key="EmailNotificationPort" value="%EMAILPORT%"></add>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
