--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -21,7 +21,11 @@
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
     <add key="LogDirectory" value="C:\LogFiles"></add>
     <add key="RootWorkingDirectory" value="C:\WorkingDirectory"></add>
-    <add key="Machine" value="machine"></add>
-    <add key="EmailNotification" value="lambert@viseo.com"></add>
+
+    <!-- Email alert config-->
+    <add key="EmailNotificationTo" value="nans.laupretre@viseo.com"></add>
+    <add key="EmailNotificationFrom" value="FiAutoDataEntry@linxens.com"></add>
+    <add key="EmailNotificationServer" value="smtp.linxens.com"></add>
+    <add key="EmailNotificationPort" value="25"></add>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
