--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -14,7 +14,7 @@
     <!-- Web service config -->
     <add key="User" value="busettyr"></add>
     <add key="Domain" value="4327"></add>
-    <add key="Password" value="linxen-test"></add>
+    <add key="Password" value="mdp"></add>
     <add key="AutoRetrySendOnError" value="2"></add>
 
     <!-- Application config -->
