Finish final version

--- a/Sources/Linxens.Gui/app.Release.config
+++ b/Sources/Linxens.Gui/app.Release.config
@@ -21,6 +21,7 @@
     <add key="RootDirectory" value="%ROOTDIR%"></add>
     <add key="LogDirectory" value="%LOGDIR%"></add>
     <add key="RootWorkingDirectory" value="%WORKDIR%"></add>
+    <add key="EditPassword" value="%EDITPASSWD%"></add>
 
     <!-- Email alert config-->
     <add key="EmailNotificationTo" value="%EMAILTO%"></add>
