--- a/Sources/Linxens.Tests/App.config
+++ b/Sources/Linxens.Tests/App.config
@@ -1,15 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="MES2QAD_ASObj"/>
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://test-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
-    </client>
-  </system.serviceModel>
   <appSettings>
     <!-- Web service config -->
     <add key="User" value="busettyr"></add>
@@ -21,7 +11,6 @@
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
     <add key="LogDirectory" value="C:\LogFiles"></add>
     <add key="RootWorkingDirectory" value="C:\WorkingDirectory"></add>
-    <add key="EditPassword" value="mdp"></add>
 
     <!-- Email alert config-->
     <add key="EmailNotificationTo" value="nans.laupretre@viseo.com"></add>
@@ -29,4 +18,4 @@
     <add key="EmailNotificationServer" value="smtp.linxens.com"></add>
     <add key="EmailNotificationPort" value="25"></add>
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+</configuration>
