--- a/Sources/Linxens.Gui/app.Debug.config
+++ b/Sources/Linxens.Gui/app.Debug.config
@@ -14,13 +14,14 @@
     <!-- Web service config -->
     <add key="User" value="busettyr"></add>
     <add key="Domain" value="4327"></add>
-    <add key="Password" value="linxen-test"></add>
+    <add key="Password" value="mdp"></add>
     <add key="AutoRetrySendOnError" value="2"></add>
 
     <!-- Application config -->
     <add key="RootDirectory" value="C:\LinxensFiles"></add>
     <add key="LogDirectory" value="C:\LogFiles"></add>
     <add key="RootWorkingDirectory" value="C:\WorkingDirectory"></add>
+    <add key="EditPassword" value="mdp"></add>
 
     <!-- Email alert config-->
     <add key="EmailNotificationTo" value="nans.laupretre@viseo.com"></add>
