--- a/Sources/Linxens.Gui/Linxens.Gui.csproj
+++ b/Sources/Linxens.Gui/Linxens.Gui.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{3E59F775-A548-40C2-90BB-B56ADFE30465}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Linxens.Gui</RootNamespace>
-    <AssemblyName>Linxens.Gui</AssemblyName>
+    <AssemblyName>FiAutoDataEntry</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
