Add TIMEOUT parameter to the application -> 1.0.3

--- a/Sources/Linxens.Gui/app.Release.config
+++ b/Sources/Linxens.Gui/app.Release.config
@@ -3,7 +3,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="MES2QAD_ASObj"/>
+        <binding name="MES2QAD_ASObj" receiveTimeout="00:%TIMEOUT%:00" sendTimeout="00:%TIMEOUT%:00"/>
       </basicHttpBinding>
     </bindings>
     <client>
