--- a/Sources/Linxens.Gui/app.Debug.config
+++ b/Sources/Linxens.Gui/app.Debug.config
@@ -3,7 +3,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="MES2QAD_ASObj"/>
+        <binding name="MES2QAD_ASObj" receiveTimeout="00:10:00" sendTimeout="00:10:00" />
       </basicHttpBinding>
     </bindings>
     <client>
