Change web services v2

--- a/Sources/Linxens.Gui/app.Release.config
+++ b/Sources/Linxens.Gui/app.Release.config
@@ -3,11 +3,15 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="MES2QAD_ASObj" receiveTimeout="00:%TIMEOUT%:00" sendTimeout="00:%TIMEOUT%:00"/>
+        <binding name="SoapBinding" receiveTimeout="00:%TIMEOUT%:00" sendTimeout="00:%TIMEOUT%:00">
+          <security mode="Transport" />
+        </binding>
+        <binding name="SoapBinding1" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="%QADURL%" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
+      <endpoint address="%QADURL%" binding="basicHttpBinding" bindingConfiguration="SoapBinding"
+                contract="QADServicesV2.QdocWebService" name="QdocWebService" />
     </client>
   </system.serviceModel>
   <appSettings>
