--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -3,11 +3,16 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="MES2QAD_ASObj" receiveTimeout="00:10:00" sendTimeout="00:10:00" />
+        <binding name="SoapBinding" receiveTimeout="00:10:00" sendTimeout="00:10:00">
+          <security mode="Transport" />
+        </binding>
+        <binding name="SoapBinding1" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://test-qad01.mic.ad:8111/wsa/wsa1" binding="basicHttpBinding" bindingConfiguration="MES2QAD_ASObj" contract="QADServices.MES2QAD_ASObj" name="MES2QAD_ASObj"/>
+      <endpoint address="https://qssilholdb08.qad.com:8143/qxiqonddb/services/QdocWebService"
+           binding="basicHttpBinding" bindingConfiguration="SoapBinding"
+           contract="QADServicesV2.QdocWebService" name="QdocWebService" />
     </client>
   </system.serviceModel>
   <appSettings>
