correction de bug

--- a/Sources/Linxens.Gui/app.Debug.config
+++ b/Sources/Linxens.Gui/app.Debug.config
@@ -10,7 +10,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://qssilholdb08.qad.com:8143/qxiqonddb/services/QdocWebService"
+      <endpoint address="https://qssilholdb08.odqad.com:8143/qxiqonddb/services/QdocWebService"
             binding="basicHttpBinding" bindingConfiguration="SoapBinding"
             contract="QADServicesV2.QdocWebService" name="QdocWebService" />
     </client>
