--- a/Sources/Linxens.Gui/app.config
+++ b/Sources/Linxens.Gui/app.config
@@ -6,11 +6,10 @@
         <binding name="SoapBinding" receiveTimeout="00:10:00" sendTimeout="00:10:00">
           <security mode="Transport" />
         </binding>
-        <binding name="SoapBinding1" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://qssilholdb08.qad.com:8143/qxiqonddb/services/QdocWebService"
+      <endpoint address="https://qssilholdb08.odqad.com:8143/qxiqonddb/services/QdocWebService"
            binding="basicHttpBinding" bindingConfiguration="SoapBinding"
            contract="QADServicesV2.QdocWebService" name="QdocWebService" />
     </client>
